# ACCoach

./: .gitattributes  .gitignore  ACCoach.bat  ACCoach.spec  Analisi_Concorrenza_Virtual_Coaching.docx  ENGINEER.md  GUIDA.md  HANDOFF-coaching-fixes.md  HANDOFF-engineer-diagnosis.md  HONE.bat  HONE.spec  HONE_Brand_Marketing_Plan.docx  HONE_Test_Plan_AC_ACC.docx  HONE_Test_Plan_AC_ACC.xlsx  LICENSE  PIANO-CALIBRAZIONI.md  Piano_Azione_ACCoach.docx  README.md  REPORT-VIEWS.md  REVIEW-2026-06-29.md  ROADMAP.md  STRATEGIE.md  TESTING.md  VALIDAZIONE_LIVE.md  accoach_main.py  build_exe.bat  pyproject.toml  requirements.txt  run_audit.py  run_coach.py  run_compare.py  run_debrief.py  run_launcher.py  run_live.py  run_monitor.py  run_overlay.py  run_recorder.py  run_server.py  run_verify_g.py  run_verify_sectors.py  (+1 more)
.claude/: settings.json
docs/: FAQ.md  index.html
tests/: conftest.py  synth.py  test_acc_out_lap_crossing.py  test_advisor.py  test_analyzer.py  test_api.py  test_balance.py  test_braking.py  test_calibration.py  test_catalog.py  test_coordination.py  test_corner_shape.py  test_crossed_start_line.py  test_cue.py  test_debrief.py  test_delta.py  test_detector.py  test_diagnosis.py  test_diagnostics.py  test_elected_reference.py  test_engine.py  test_engine_gate.py  test_engine_integration.py  test_engineer.py  test_engineer_profiles.py  test_events.py  test_feed.py  test_focus.py  test_focus_memory.py  test_fuel.py  test_gears.py  test_grip_envelope.py  test_headline.py  test_hub_home.py  test_i18n.py  test_import_pro.py  test_is_acc.py  test_lap.py  (+49 more)
(+104 files in other folders)
