[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "accoach"
version = "0.1.0"
description = "Real-time driving coach for Assetto Corsa and Assetto Corsa Competizione"
requires-python = ">=3.11"
dependencies = ["rich>=13.7"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# src/ layout: let tests import `accoach` without an editable install.
pythonpath = ["src"]
testpaths = ["tests"]
